tree-sitter/FORTRAN77/test/corpus/character_simple.txt
================================================================================
FORTRAN77 simple CHARACTER operations
================================================================================

CHARACTER*10 NAME
NAME = 'HELLO'
PRINT *, NAME

--------------------------------------------------------------------------------

(program
  (statement
    (statement_body
      (character_declaration
        (number)
        (variable_list
          (variable)))))
  (statement
    (statement_body
      (assignment
        (variable)
        (expression
          (string_literal)))))
  (statement
    (statement_body
      (print_stmt
        (expression
          (variable))))))
