tree-sitter/FORTRAN77/test/corpus/character_type.txt
================================================================================
FORTRAN 77 CHARACTER type and operations
================================================================================

      CHARACTER*80 LINE, WORD*20, NAME*10
      CHARACTER CHAR1, CHAR2*5
      INTEGER I, LEN
      
      LINE = 'THIS IS A TEST LINE FOR CHARACTER OPERATIONS'
      WORD = 'HELLO'
      NAME = 'FORTRAN'
      CHAR1 = 'X'
      CHAR2 = 'WORLD'
      
      LEN = LEN(LINE)
      I = INDEX(LINE, 'TEST')
      
      IF (WORD .EQ. 'HELLO') THEN
          PRINT *, 'FOUND HELLO'
      ENDIF
      
      LINE(1:5) = 'START'

--------------------------------------------------------------------------------

(program
  (program_unit
    (main_program
      (statement
        (specification_statement
          (character_declaration
            (character_length)
            (character_variable_list
              (character_variable
                (variable_name))
              (character_variable
                (variable_name)
                (character_length))
              (character_variable
                (variable_name)
                (character_length))))))
      (statement
        (specification_statement
          (character_declaration
            (character_variable_list
              (character_variable
                (variable_name))
              (character_variable
                (variable_name)
                (character_length))))))
      (statement
        (specification_statement
          (type_declaration
            (type_spec)
            (entity_list
              (entity)
              (entity)))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (character_expression
                (character_primary
                  (character_constant)))))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (character_expression
                (character_primary
                  (character_constant)))))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (character_expression
                (character_primary
                  (character_constant)))))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (character_expression
                (character_primary
                  (character_constant)))))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (character_expression
                (character_primary
                  (character_constant)))))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (arithmetic_expression
                (term
                  (factor
                    (primary
                      (function_reference
                        (intrinsic_function_name)
                        (actual_argument_list
                          (actual_argument
                            (character_expression
                              (character_primary
                                (character_variable)))))))))))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (arithmetic_expression
                (term
                  (factor
                    (primary
                      (function_reference
                        (intrinsic_function_name)
                        (actual_argument_list
                          (actual_argument
                            (character_expression
                              (character_primary
                                (character_variable))))
                          (actual_argument
                            (character_expression
                              (character_primary
                                (character_constant)))))))))))))
      (statement
        (control_statement
          (if_construct
            (if_then_statement
              (logical_expression
                (relational_expression
                  (character_expression
                    (character_primary
                      (character_variable)))
                  (relational_operator)
                  (character_expression
                    (character_primary
                      (character_constant))))))
            (statement
              (io_statement
                (print_statement
                  (io_list
                    (character_constant)))))
            (endif_statement))))
      (statement
        (arithmetic_statement
          (assignment_statement
            (variable
              (substring_reference
                (character_variable)
                (substring_range
                  (substring_start
                    (arithmetic_expression
                      (term
                        (factor
                          (primary
                            (constant
                              (integer_constant)))))))
                  (substring_end
                    (arithmetic_expression
                      (term
                        (factor
                          (primary
                            (constant
                              (integer_constant))))))))))
            (expression
              (character_expression
                (character_primary
                  (character_constant)))))))
