tree-sitter/FORTRAN77/test/corpus/if_simple.txt
================================================================================
Simple IF THEN
================================================================================

      INTEGER X
      X = 10
      IF (X .GT. 5) THEN
          PRINT *, 'BIG'
      ENDIF
      END

--------------------------------------------------------------------------------

(program
  (program_unit
    (main_program
      (statement_without_end
        (specification_statement
          (type_declaration
            (type_spec)
            (entity_list
              (entity)))))
      (statement_without_end
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (arithmetic_expression
                (term
                  (factor
                    (primary
                      (constant
                        (integer_constant))))))))))
      (statement_without_end
        (control_statement
          (if_construct
            (if_then_statement
              (logical_expression
                (relational_expression
                  (arithmetic_expression
                    (term
                      (factor
                        (primary
                          (variable
                            (simple_variable))))))
                  (relational_operator)
                  (arithmetic_expression
                    (term
                      (factor
                        (primary
                          (constant
                            (integer_constant)))))))))
            (statement
              (io_statement
                (print_statement
                  (io_list
                    (character_constant)))))
            (endif_statement))))
      (end_statement))))
