tree-sitter/FORTRAN77/test/corpus/minimal.txt
================================================================================
Minimal test
================================================================================

X = 42

--------------------------------------------------------------------------------

(program
  (statement
    (statement_body
      (assignment
        (variable)
        (expression
          (number))))))
