tree-sitter/FORTRAN77/test/corpus/simple.txt
================================================================================
FORTRAN 77 simple test
================================================================================

      X = 1
      END

--------------------------------------------------------------------------------

(program
  (program_unit
    (main_program
      (statement_without_end
        (arithmetic_statement
          (assignment_statement
            (variable
              (simple_variable))
            (expression
              (arithmetic_expression
                (term
                  (factor
                    (primary
                      (constant
                        (integer_constant))))))))))
      (end_statement))))